<resources>
    <string name="app_name">Chemical X</string>
    <string name="action_settings">Settings</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="one">One</string>
    <string name="activity_example_label">Example</string>
    <string name="open">open</string>
    <string name="close">close</string>
    <string name="title_activity_fire_base_login">Sign in</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome !"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <string name="explanation_access_to_appusage_is_not_enabled"><![CDATA[Failed to retrieve app usage         statistics. You may need to enable access         for this app through Settings > Security > Apps with usage access]]></string>
    <string name="open_app_usage_setting">Open Apps with usage access settings</string>
    <string name="minutes_used">"minutes used: "</string>
    <string name="usage_pie_chart_title">"App Usage Summary"</string>

    <string-array name="todo_categories">
    <item>What do you think?</item>
    <item>Work</item>
    <item>Hobbies</item>
    <item>School</item>
    <item>Chores</item>
</string-array>

    <string-array name="feedback_dialog">
        <item>YES :D</item>
        <item>average</item>
        <item>unproductive :(</item>
    </string-array>

    <string name="delete_account_setting_dialog_title">"Delete Account?"</string>
    <string name="field_password_hint">"Password"</string>
    <string name="delete_account_setting_dialog_message">"This will permanently delete your account and all your data, including your scheduler.\n\nType in your password to confirm."</string>
    <string name="delete_account_setting_dialog_affirmative">"Delete account"</string>
    <string name="cancel">"Cancel"</string>

    <string name="delete_ml_training_data_setting_dialog_title">"Delete Machine Learning Training Data?"</string>
    <string name="delete_ml_training_data_setting_dialog_message">"This will permanently delete all of the machine learning training data that is currently on your device."</string>
    <string name="delete_ml_training_data_setting_dialog_affirmative">"Delete data"</string>

    <string name="schedule_read_calendar_disabled_text">"The schedule tab is disabled because the permission may not be granted for Chemical X to read from your Calendar.\n\nIf you want to grant the permission manually, go to\nSettings > Apps > Chemical X > App Settings: Permissions\nand tap on Calendar.\n\nTap the button below if you want to go straight to the Chemical X page in your device settings."</string>
    <string name="schedule_read_calendar_disabled_grant_permission_button_text">"Chemical X Device Settings"</string>

    <string name="schedule_read_calendar_permission_dialog_title">"Read Calendar Permission Required"</string>
    <string name="schedule_read_calendar_permission_dialog_message">"Your permission to read from the Calendar is required in order to display its events in the schedule tab.\n\nWould you like to grant the permission?"</string>
    <string name="schedule_read_calendar_permission_dialog_positive_button_text">"Grant permission"</string>
    <string name="schedule_read_calendar_permission_dialog_negative_button_text">"No thanks"</string>

    <string name="schedule_add_event_button_text">"Add"</string>
    <string name="schedule_delete_events_button_text">"Delete"</string>

    <string name="schedule_add_event_dialog_title">"Add Event"</string>
    <string name="schedule_add_event_dialog_positive_button_text">"Add"</string>
    <string name="schedule_add_event_dialog_neutral_button_text">"More options"</string>
    <string name="field_title_hint">"Title"</string>
    <string name="schedule_add_event_dialog_event_all_day_switch_text">"All day"</string>
    <string name="field_start_datetime_hint">"Start"</string>
    <string name="field_end_datetime_hint">"End"</string>
    <string-array name="field_recurrence_rule_array">
        <item>"Never repeat"</item>
        <item>"Daily"</item>
        <item>"Weekly"</item>
        <item>"Monthly"</item>
        <item>"Yearly"</item>
    </string-array>
    <string name="schedule_add_event_dialog_write_calendar_disabled_text">"Adding events to your Calendar directly from Chemical X is disabled because the permission may not be granted.\n\nIf you want to grant the permission manually, go to\nSettings > Apps > Chemical X > App Settings: Permissions\nand tap on Calendar.\n\nTap the button below if you want to go straight to the Chemical X page in your device settings."</string>
    <string name="schedule_add_event_dialog_write_calendar_grant_permission_button_text">"Grant permission"</string>

    <string name="add_event_update_datetime_dialog_title">"Update Date and/or Time"</string>
    <string name="add_event_update_datetime_dialog_positive_button_text">"Update"</string>

    <string name="settings">Settings</string>

    <string name="feedback_dialog_question">How was your session?</string>
    <string name="add_task_error_no_title">Your task needs a title!</string>

    <string name="request_task_suggestion_dialog_title">"Request Task Suggestion"</string>
    <string name="request_task_suggestion_dialog_message">"If you want to know which task you are likely to do most productively within a certain duration, you can request for a suggestion.\n\nInput the desired duration for this task."</string>
    <string name="request_task_suggestion_dialog_positive_button_text">"Request"</string>

    <string name="task_suggestion_result_dialog_title">"Task Suggestion"</string>
    <string name="task_suggestion_result_dialog_failed_request_message">"No task can be suggested at this time. You may not have any tasks to do, or there was an error processing your request. We apologise; please try again later."</string>
    <string name="okay">"Okay"</string>
</resources>
